tests/ui/consts/const_in_pattern/incomplete-slice.stderr
warning: to use a constant of type `E` in a pattern, `E` must be annotated with `#[derive(PartialEq, Eq)]`
  --> $DIR/incomplete-slice.rs:11:9
   |
LL |         E_SL => {}
   |         ^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #62411 <https://github.com/rust-lang/rust/issues/62411>
   = note: the traits must be derived, manual `impl`s are not sufficient
   = note: see https://doc.rust-lang.org/stable/std/marker/trait.StructuralEq.html for details
   = note: `#[warn(indirect_structural_match)]` on by default

error[E0004]: non-exhaustive patterns: `&_` not covered
  --> $DIR/incomplete-slice.rs:9:11
   |
LL |     match &[][..] {
   |           ^^^^^^^ pattern `&_` not covered
   |
   = note: the matched value is of type `&[E]`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
LL ~         E_SL => {}
LL +         &_ => todo!()
   |

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0004`.
